- change endpoint to /api/categories
